[package]
name = "sortedvec"
version = "0.4.1"
authors = ["Marcus Klaas <mail@marcusklaas.nl>"]
edition = "2018"
description = "a sorted vector that enables quick lookups"
license = "Apache-2.0"
repository = "https://github.com/marcusklaas/sortedvec"
keywords = [ "sortedvec", "lookup", "table", "datastructure", "vec" ]
readme = "readme.md"

[dependencies]
faster = { git = "https://github.com/AdamNiederer/faster" }

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
