[package]
name = "sortedvec"
version = "0.5.0"
authors = ["Marcus Klaas <mail@marcusklaas.nl>"]
edition = "2018"
description = "a sorted vector that enables quick lookups"
license = "Apache-2.0"
repository = "https://github.com/marcusklaas/sortedvec"
keywords = [ "sortedvec", "lookup", "table", "datastructure", "vec" ]
readme = "readme.md"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = { version = "0.7", features=["small_rng"] }
